# PCs-connector

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/commons/: CMakeLists.txt
common/commons/include/commons/: CursorGuard.hpp  IApp.hpp
common/commons/src/: CursorGuard.cpp  IApp.cpp
common/connection/: CMakeLists.txt
common/connection/include/connection/: IReceiver.hpp  MsgDispatcher.hpp  Receiver.hpp  Sender.hpp  Socket.hpp
common/connection/src/: MsgDispatcher.cpp  Receiver.cpp  Sender.cpp  Socket.cpp
common/connection/tests/: CMakeLists.txt
common/connection/tests/mocks/: CMakeLists.txt
common/connection/tests/mocks/include/connection/: ReceiverMock.hpp  SocketMock.hpp
common/gui/: CMakeLists.txt
common/gui/include/gui/: CursorManagement.h  GraphicsRectItem.h  GraphicsScene.h  MainWindow.h  MainWindowLin.h  MainWindowWin.h  MsgSender.h  ScreenIndicator.h  ScreenResolutionMsg.h
common/gui/src/: CursorManagement.cpp  GraphicsRectItem.cpp  GraphicsScene.cpp  MainWindow.cpp  MainWindow.ui  MainWindowLin.cpp  MainWindowWin.cpp  MainWindowWin.ui  MsgSender.cpp  ScreenIndicator.cpp  ScreenIndicator.ui  ScreenResolutionMsg.cpp
common/interface/: CMakeLists.txt
common/interface/include/interface/: IApp.hpp
common/internal_types/: CMakeLists.txt
common/internal_types/include/internal_types/: CommonTypes.hpp  Deserializer.hpp  DeserializerWin.hpp  IDeserializer.hpp  ISerializer.hpp  KeyEvent.hpp  MouseEvent.hpp  Point.hpp  ScreenResolution.hpp  SerializedValues.hpp  Serializer.hpp  TransformationPoints.hpp  Visitor.hpp
common/internal_types/include/internal_types/linux/: Deserializer.hpp
common/internal_types/include/internal_types/windows/: Deserializer.hpp
common/internal_types/src/: Deserializer.cpp  DeserializerWin.cpp  Serializer.cpp
common/internal_types/src/windows/: Deserializer.cpp
common/internal_types/tests/mocks/: CMakeLists.txt
common/internal_types/tests/mocks/include/internal_types/: DeserializerMock.hpp
include/: Console.hpp
linux/: CMakeLists.txt  main.cpp
linux/app_management/: CMakeLists.txt
linux/app_management/include/app_management/: App.hpp  Consumer.hpp  MainWindow.h  MyGraphicsRectItem.h  MyGraphicsScene.h
linux/app_management/src/: App.cpp  Consumer.cpp  GraphicsRectItem.cpp  GraphicsScene.cpp  MainWindow.cpp  MyGraphicsRectItem.cpp  MyGraphicsScene.cpp
linux/app_management/tests/ut/: CMakeLists.txt  ConsumerTests.cpp
linux/event_consumer/: CMakeLists.txt
linux/event_consumer/include/event_consumer/: CursorGuard.hpp  IKeyboardReceiver.hpp  IMouseReceiver.hpp  KeyboardReceiver.hpp  MouseReceiver.hpp  TestKeyboardReceiver.hpp
linux/event_consumer/src/: CursorGuard.cpp  KeyboardReceiver.cpp  MouseReceiver.cpp  TestKeyboardReceiver.cpp
linux/event_consumer/tests/mocks/: CMakeLists.txt
linux/event_consumer/tests/mocks/include/event_consumer/: KeyboardReceiverMock.hpp  MouseReceiverMock.hpp
linux/gui/: CMakeLists.txt
linux/gui/include/gui/: GraphicsScene.h  MainWindow.h
linux/gui/src/: App.cpp  Consumer.cpp  GraphicsRectItem.cpp  GraphicsScene.cpp  MainWindow.cpp
linux/include/: FakeKey.hpp  IKey.hpp  Server.hpp  ServerSession.hpp  TestKey.hpp  chat_message.hpp
linux/internal_types/: CMakeLists.txt
linux/internal_types/include/internal_types/: Deserializer.hpp  IDeserializer.hpp  KeyEvent.hpp  MouseEvent.hpp  Visitor.hpp
linux/internal_types/src/: Deserializer.cpp
linux/internal_types/tests/mocks/include/internal_types/: DeserializerMock.hpp
linux/key_management/: CMakeLists.txt
linux/key_management/include/key_management/: FakeKey.hpp  IKey.hpp  KeyHandlerSelector.hpp  TestKey.hpp
linux/key_management/src/: Deserializer.cpp  FakeKey.cpp  KeyHandlerSelector.cpp  TestKey.cpp
linux/key_management/tests/mocks/: CMakeLists.txt
linux/key_management/tests/mocks/include/key_management/: KeyMock.hpp
linux/main_app/: CMakeLists.txt  main.cpp
linux/mouse_management/: CMakeLists.txt
linux/mouse_management/include/mouse_management/: FakeMouse.hpp  IMouse.hpp
linux/mouse_management/src/: FakeMouse.cpp
linux/server_app/: CMakeLists.txt
linux/server_app/include/server_app/: ConcreteReceiver.hpp  IReceiver.hpp  Server.hpp  ServerAppTypes.hpp  ServerSession.hpp
linux/server_app/src/: ConcreteReceiver.cpp  Server.cpp  ServerSession.cpp
linux/server_app/tests/: CMakeLists.txt
linux/server_app/tests/mocks/: CMakeLists.txt
linux/server_app/tests/mocks/include/server_app/: ReceiverMock.hpp
linux/server_app/tests/ut/: CMakeLists.txt  ServerAppTests.cpp
linux/src/: FakeKey.cpp  Server.cpp  ServerSession.cpp  TestKey.cpp
linux/tests/: CMakeLists.txt
linux/tests/integration-tests/: CMakeLists.txt  Connector.py  fixtures.py  test_key.py
linux/tests/ut/: CMakeLists.txt  FirstTest.cpp  GtestMain.cpp
src/: Keyboard.cpp
windows/: CMakeLists.txt  main.cpp  run.bat
windows/app_management/: CMakeLists.txt
windows/app_management/include/app_management/: App.hpp  Console.hpp  Vendor.hpp
windows/app_management/src/: App.cpp  Console.cpp  Vendor.cpp
windows/connection/: CMakeLists.txt
windows/connection/include/connection/: Sender.hpp
windows/connection/src/: Socket.cpp
windows/event_vendor/: CMakeLists.txt
windows/event_vendor/include/event_vendor/: KeyboardSender.hpp  MouseSender.hpp
windows/event_vendor/src/: KeyboardSender.cpp  MouseSender.cpp
windows/gui/include/gui/: GraphicsScene.h  MainWindow.h
windows/gui/src/: MainWindow.cpp
windows/include/: Client.hpp  Console.hpp  Keyboard.hpp  Mouse.hpp  Types.hpp  chat_message.hpp
windows/main_app/: CMakeLists.txt  main.cpp
windows/mouse_management/: CMakeLists.txt
windows/mouse_management/include/mouse_management/: IMouseHandler.hpp  MouseHandler.hpp
windows/mouse_management/src/: MouseHandler.cpp
windows/mouse_management/tests/mocks/: CMakeLists.txt
windows/mouse_management/tests/mocks/include/mouse_management/: MouseMock.hpp
windows/src/: Client.cpp  Console.cpp  Keyboard.cpp  Mouse.cpp
